# RPGTDD

./: CMakeLists.txt  README.md
CMakeModules/: CodeCoverage.cmake
Config/: graphics.ini  keyboard.ini  tile_ids.ini
Scripts/: CoreTestsCoverage.sh  EventsTestsCoverage.sh  FileMgmtTestsCoverage.sh  GuiTestsCoverage.sh  StatesTestsCoverage.sh  TilesTestsCoverage.sh  VectorMathTestsCoverage.sh  build.sh  runApp.sh  runCoreTests.sh  runEventsTests.sh  runFileMgmtTests.sh  runGuiTests.sh  runStatesTests.sh  runTestComponent.sh  runTilesTests.sh  runUT.sh  runVectorMathTests.sh  testCoverage.sh
Src/: CMakeLists.txt  main.cpp
Src/Core/: CMakeLists.txt
Src/Core/Headers/: AssetsManager.h  Clock.h  Clock.hpp  Config.h  ConfigManager.hpp  CoreBuilder.h  CoreBuilder.hpp  Engine.h  Engine.hpp  EngineContext.h  Game.h  Game.hpp  GameLoop.h  GameLoop.hpp  GraphicsConfig.h  IniParser.h  StateMachine.h  StateMachine.hpp  Window.h  Window.hpp  WindowBuilder.h  WindowManager.h  WindowManagerBuilder.h
Src/Core/Source/: AssetsManager.cpp  Clock.cpp  ConfigManager.cpp  Engine.cpp  Game.cpp  GameLoop.cpp  GraphicsConfig.cpp  IniParser.cpp  StateMachine.cpp  Window.cpp  WindowBuilder.cpp  WindowManager.cpp  WindowManagerBuilder.cpp
Src/Events/: CMakeLists.txt
Src/Events/Headers/: ButtonActions.hpp  ButtonEventHandler.hpp  GuiActions.hpp  InputHandler.hpp  InputListener.hpp  MouseEventListener.hpp  StateActions.hpp
Src/Events/Source/: ButtonActions.cpp  InputHandler.cpp  InputListener.cpp  StateActions.cpp
Src/FileMgmt/: CMakeLists.txt
Src/FileMgmt/Headers/: AssetsManager.hpp  Config.hpp  ConfigManager.hpp  EditorAssetsManager.hpp  GameAssetsManager.hpp  IniParser.hpp  MainMenuAssetsManager.hpp
Src/FileMgmt/Source/: AssetsManager.cpp  ConfigManager.cpp  EditorAssetsManager.cpp  IniParser.cpp  MainMenuAssetsManager.cpp
Src/Gui/: CMakeLists.txt
Src/Gui/Headers/: Button.hpp  ButtonBuilder.hpp  ButtonEventHandler.hpp  ButtonList.hpp  ButtonListBuilder.hpp  ButtonMenu.hpp  ButtonMenuBuilder.hpp  DropDownList.hpp  DropDownListBuilder.hpp  EditorGui.hpp  EditorGuiManager.hpp  GameGui.hpp  GameGuiManager.hpp  GuiManager.hpp  MainMenuGuiManager.hpp  MenuGui.hpp  SettingsGuiManager.hpp  UserInterface.hpp
Src/Gui/Source/: Button.cpp  ButtonBuilder.cpp  ButtonMenu.cpp  ButtonMenuBuilder.cpp  DropDownList.cpp  DropDownListBuilder.cpp  EditorGui.cpp  EditorGuiManager.cpp  GameGui.cpp  GuiManager.cpp  MainMenuGuiManager.cpp  MenuGui.cpp  SettingsGuiManager.cpp  UserInterface.cpp
Src/PrecompiledHeaders/: stdafx.h
Src/States/: CMakeLists.txt
Src/States/Headers/: EditorState.hpp  GameState.hpp  MainMenuState.h  MainMenuState.hpp  MapState.hpp  MenuState.hpp  SettingsState.hpp  State.h  State.hpp
Src/States/Source/: EditorState.cpp  GameState.cpp  MainMenuState.cpp  SettingsState.cpp  State.cpp
Src/Tiles/: CMakeLists.txt
Src/Tiles/Headers/: GameMapManager.hpp  Tile.hpp  TileBuilder.hpp  TileField.hpp  TileMap.hpp  TileMapManager.hpp  TilePositionGenerator.hpp
Src/Tiles/Source/: GameMapManager.cpp  Tile.cpp  TileBuilder.cpp  TileField.cpp  TileMap.cpp  TilePositionGenerator.cpp
Src/Types/: CMakeLists.txt
Src/Types/Headers/: Background.hpp  Window.hpp
Src/Types/Source/: Window.cpp
Src/VectorMath/: CMakeLists.txt
Src/VectorMath/Headers/: ButtonTextCalculations.hpp  PauseMenuCalculator.hpp  PixelsPoint.hpp  ScreenPercentagePoint.hpp  SettingsListCalculator.hpp
Src/VectorMath/Source/: ButtonTextCalculations.cpp  PauseMenuCalculator.cpp  PixelsPoint.cpp  ScreenPercentagePoint.cpp  SettingsListCalculator.cpp
TestResources/Config/: editor_keybinds.ini  (+2 more)
Tests/: CMakeLists.txt
Tests/Modules/CoreTests/: AssetsManagerTests.cpp  CMakeLists.txt  ClockMock.h  ClockTests.cpp  ConfigManagerTests.cpp  CoreBuilderTests.cpp  EngineTests.cpp  GameLoopTests.cpp  GameMock.h  GameTests.cpp  IniParserTests.cpp  StateMachineMock.h  StateMachineTests.cpp  StateMock.h  WindowBuilderMock.h  WindowManagerBuilderMock.h  WindowManagerMock.h  WindowMock.h  WindowTests.cpp
Tests/Modules/EventsTests/: ButtonActionsTests.cpp  CMakeLists.txt  GuiActionsTests.cpp  InputHandlerTests.cpp  InputListenerTests.cpp  StateActionsTests.cpp
Tests/Modules/FileMgmtTests/: AssetsManagerTests.cpp  CMakeLists.txt  ConfigManagerTests.cpp  EditorAssetsManagerTests.cpp  IniParserTests.cpp  MainMenuAssetsManagerTests.cpp
Tests/Modules/GuiTests/: ButtonBuilderTests.cpp  ButtonMenuBuilderTests.cpp  ButtonMenuTests.cpp  ButtonTests.cpp  CMakeLists.txt  DropDownListBuilderTests.cpp  DropDownListTests.cpp  EditorGuiManagerTests.cpp  EditorGuiTests.cpp  GameGuiManagerTests.cpp  GameGuiTests.cpp  GuiManagerFixture.hpp  GuiManagerTests.cpp  MainMenuGuiManagerTests.cpp  MenuGuiTests.cpp  SettingsGuiManagerTests.cpp  UserInterfaceTests.cpp
Tests/Modules/Mocks/: AssetsManagerMock.h  AssetsManagerMock.hpp  ButtonBuilderMock.hpp  ButtonEventHandlerMock.hpp  ButtonListBuilderMock.hpp  ButtonListMock.hpp  ButtonMenuBuilderMock.hpp  ButtonMock.hpp  CMakeLists.txt  ClockMock.h  ClockMock.hpp  ConfigManagerMock.hpp  CoreBuilderMock.h  CoreBuilderMock.hpp  DropDownListBuilderMock.hpp  DropDownListMock.hpp  EngineContextMock.h  EngineMock.h  EngineMock.hpp  GameMock.h  GameMock.hpp  GraphicsConfigMock.h  GuiActionMock.hpp  GuiManagerMock.hpp  IniParserMock.h  IniParserMock.hpp  InputHandlerMock.hpp  InputListenerMock.hpp  KeyboardMapMock.hpp  MouseEventListenerMock.hpp  StateMachineMock.h  StateMachineMock.hpp  StateMock.h  StateMock.hpp  TileBuilderMock.hpp  TileMapManagerMock.hpp  TileMapMock.hpp  TileMock.hpp  UserInterfaceMock.hpp  WindowMock.h  (+1 more)
Tests/Modules/StatesTests/: CMakeLists.txt  DummyMock.h  EditorStateTests.cpp  MainMenuStateTests.cpp  SettingsStateTests.cpp  StatesTests.cpp
Tests/Modules/TilesTests/: CMakeLists.txt  GameMapManagerTests.cpp  TileBuilderTests.cpp  TileFieldTests.cpp  TileMapTests.cpp  TilePositionGeneratorTests.cpp  TileTests.cpp
Tests/Modules/VectorMathTests/: ButtonTextCalculationsTests.cpp  CMakeLists.txt  PauseMenuCalculatorTests.cpp  PixelsPointTests.cpp  ScreenPercentagePointTests.cpp
(+1 files in other folders)
